Api.PolicyHeaders.ContentSecurityPolicy/.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-%SERVICE_NAME%
  namespace: %KUBERNETES_NAMESPACE%
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - %CERTIFICATE_HOST%
    secretName: %CERTIFICATE_HOST%-tls
  rules:
  - host: %CERTIFICATE_HOST%
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: %SERVICE_NAME%
            port:
              number: 8080
